--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "type": "module",
   "scripts": {
-    "start": "http-server -p 8080",
+    "start": "node server.js",
+    "dev": "http-server -p 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +26,13 @@
   },
   "homepage": "https://github.com/AlarmclockUSA/BplusAm#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "http-server": "^14.1.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "http-server": "^14.1.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^8.35.0"
   }
-} 
+}
